tests/NormalTests/paczka1/small_fuzzy/70645812.err
Error in line 4: vf5AGRaNF A995 98,0
Error in line 2: A770 A957 47,2
